fix word break in todo-card

--- a/src/app/alino-app/components/todo/todo-card.module.css
+++ b/src/app/alino-app/components/todo/todo-card.module.css
@@ -14,6 +14,8 @@
   justify-content: center;
   align-items: center;
   gap: 10px;
+  overflow: hidden;
+  word-break: break-word;
 }
 .deleteButton {
   display: flex;
